# average

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
benches/: average.rs  kurtosis.rs  mean.rs  min.rs
src/: average.rs  covariance.rs  distinct_elements.rs  histogram.rs  histogram_const.rs  lib.rs  macros.rs  minmax.rs  quantile.rs  reduce.rs  traits.rs  weighted_average.rs  weighted_average2.rs  weighted_mean.rs
src/moments/: kurtosis.rs  mean.rs  mod.rs  skewness.rs  variance.rs
tests/: average.rs  histogram.rs  kurtosis.rs  macros.rs  max.rs  mean.rs  min.rs  moments.rs  proptest.rs  quantile.rs  random.rs  skewness.rs  streaming_stats.rs  weighted_average.rs  weighted_average2.rs  weighted_mean.rs
tests/integration/: covariance.rs  distinct_elements.rs  histogram.rs  histogram_const.rs  kurtosis.rs  macros.rs  main.rs  max.rs  mean.rs  min.rs  moments.rs  proptest.proptest-regressions  proptest.rs  quantile.rs  random.rs  skewness.rs  streaming_stats.rs  weighted_mean.rs
