[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
categories = ["science", "no-std"]
description = "Calculate statistics iteratively"
documentation = "https://docs.rs/average"
keywords = ["stats", "mean", "skewness", "kurtosis", "quantile"]
license = "MIT OR Apache-2.0"
name = "average"
readme = "README.md"
repository = "https://github.com/vks/average"
version = "0.15.1"
edition = "2021"
rust-version = "1.61"
include = ["src/**/*", "benches/*", "LICENSE-*", "README.md"]
resolver = "2"

[features]
serde1 = ["serde", "serde_derive", "serde-big-array"]
nightly = []
std = ["easy-cast/std", "num-traits/std"]
libm = ["easy-cast/libm", "num-traits/libm"]
distinct_elements = ["rand", "arrayvec"]
default = ["libm"]

[[bench]]
harness = false
name = "mean"

[[bench]]
harness = false
name = "min"

[[bench]]
harness = false
name = "kurtosis"

[dependencies]
num-traits = { version = "0.2", default-features = false }
float-ord = "0.3"
easy-cast = { version = "0.5", default-features = false, optional = true }
serde_derive = { version = "1", optional = true }
serde-big-array = { version = "0.5", optional = true }
rayon = { version = "=1.7", optional = true }  # MSRV 1.61
rayon-core = { version = "=1.11", optional = true }  # MSRV 1.61
arrayvec = { version = "0.7.4", optional = true }
rand = { version =  "0.8", default-features = false, features = ["small_rng"], optional = true }

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies]
bencher = "0.1"
rand = "0.8"
rand_xoshiro = "0.6"
rand_distr = "0.4"
serde_json = "1"
streaming-stats = "0.2"
quantiles = "0.7"

[package.metadata.docs.rs]
# Enable certain features when building docs for docs.rs
features = ["libm", "serde1", "rayon"]
rustdoc-args = ["--cfg", "doc_cfg"]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --features libm,serde1,rayon --no-deps --open
