[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
categories = ["science", "no-std"]
description = "Calculate statistics iteratively"
documentation = "https://docs.rs/average"
keywords = ["stats", "mean", "skewness", "kurtosis", "quantile"]
license = "MIT OR Apache-2.0"
name = "average"
readme = "README.md"
repository = "https://github.com/vks/average"
version = "0.16.0"
edition = "2021"
rust-version = "1.63"
include = ["src/**/*", "benches/*", "LICENSE-*", "README.md"]

[features]
serde = ["dep:serde", "dep:serde_derive", "dep:serde-big-array"]
nightly = []
std = ["dep:easy-cast", "easy-cast/std", "num-traits/std"]
libm = ["dep:easy-cast", "easy-cast/libm", "num-traits/libm"]
default = ["libm"]

[[bench]]
harness = false
name = "mean"

[[bench]]
harness = false
name = "min"

[[bench]]
harness = false
name = "kurtosis"

[dependencies]
num-traits = { version = "0.2", default-features = false }
float-ord = "0.3"
easy-cast = { version = "0.5", default-features = false, optional = true }
serde_derive = { version = "1", optional = true }
serde-big-array = { version = "0.5", optional = true }
rayon = { version = "=1.10", optional = true }  # MSRV 1.63
rayon-core = { version = "=1.12", optional = true }  # MSRV 1.63

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies]
bencher = "0.1"
rand = "0.9"
rand_xoshiro = "0.7"
rand_distr = "0.5"
serde_json = "1"
streaming-stats = "0.2"
quantiles = "0.7"

[package.metadata.docs.rs]
# Enable certain features when building docs for docs.rs
features = ["libm", "serde", "rayon"]
rustdoc-args = ["--generate-link-to-definition"]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs -Zunstable-options --generate-link-to-definition cargo +nightly doc --features libm,serde,rayon --no-deps --open
